[gd_scene load_steps=38 format=2]

[ext_resource path="res://sprites/location/floor.png" type="Texture" id=1]
[ext_resource path="res://tscnes/mobs/player.tscn" type="PackedScene" id=2]
[ext_resource path="res://scripts/gameplay/map/game.gd" type="Script" id=3]
[ext_resource path="res://sprites/ranking/B.png" type="Texture" id=4]
[ext_resource path="res://sprites/ranking/A.png" type="Texture" id=5]
[ext_resource path="res://sprites/ranking/ZZZ.png" type="Texture" id=6]
[ext_resource path="res://sprites/ranking/C.png" type="Texture" id=7]
[ext_resource path="res://sprites/ranking/D.png" type="Texture" id=8]
[ext_resource path="res://scripts/ranking/ranking.gd" type="Script" id=9]
[ext_resource path="res://tscnes/dev/hidden_stats.tscn" type="PackedScene" id=10]
[ext_resource path="res://tscnes/gameplay/pickable/pickable_weapon.tscn" type="PackedScene" id=11]
[ext_resource path="res://sprites/menu/logo.png" type="Texture" id=12]
[ext_resource path="res://sprites/menu/localization/ru.png" type="Texture" id=13]
[ext_resource path="res://fonts/EpilepsySansBold.ttf" type="DynamicFontData" id=14]
[ext_resource path="res://fonts/EpilepsySans.ttf" type="DynamicFontData" id=15]
[ext_resource path="res://sprites/weapons/ui/shop_button.png" type="Texture" id=16]
[ext_resource path="res://tscnes/ads/ad_watcher.tscn" type="PackedScene" id=17]
[ext_resource path="res://sounds/music/they dont stop.wav" type="AudioStream" id=18]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "A",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "B",
"speed": 5.0
}, {
"frames": [ ExtResource( 7 ) ],
"loop": true,
"name": "C",
"speed": 5.0
}, {
"frames": [ ExtResource( 8 ) ],
"loop": true,
"name": "D",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ) ],
"loop": true,
"name": "ZZZ",
"speed": 5.0
} ]

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 15 )

[sub_resource type="DynamicFont" id=6]
font_data = ExtResource( 14 )

[sub_resource type="DynamicFont" id=7]
font_data = ExtResource( 14 )

[sub_resource type="DynamicFont" id=8]
font_data = ExtResource( 14 )

[sub_resource type="Animation" id=10]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ) ]
}

[sub_resource type="Animation" id=9]
resource_name = "def"
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}

[sub_resource type="DynamicFont" id=13]
size = 66
font_data = ExtResource( 14 )

[sub_resource type="DynamicFont" id=15]
size = 30
font_data = ExtResource( 15 )

[sub_resource type="Animation" id=16]
resource_name = "def"
length = 5.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2, 3, 4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.290196, 0, 1, 1 ), Color( 1, 0, 0.937255, 1 ), Color( 0.290196, 1, 0, 1 ), Color( 0.996078, 0, 0.278431, 1 ), Color( 0.870588, 0.996078, 0, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("overlay:self_modulate")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1, 2, 3, 4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 0, 0.866667, 1 ), Color( 1, 0.25098, 0.25098, 1 ), Color( 0.478431, 0.188235, 1, 1 ), Color( 0.192157, 0.137255, 0.227451, 1 ), Color( 0.847059, 1, 0.478431, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("overlay:rect_position")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5, 2, 2.5, 3, 3.5, 4, 4.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 5, 0 ), Vector2( -5, 0 ), Vector2( 0, -5 ), Vector2( 0, 5 ), Vector2( 5, 5 ), Vector2( -5, -5 ), Vector2( 5, -5 ), Vector2( -5, 5 ), Vector2( 10, 10 ) ]
}

[sub_resource type="DynamicFont" id=17]
font_data = ExtResource( 14 )

[sub_resource type="DynamicFont" id=18]
font_data = ExtResource( 15 )

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("../fg/ranking:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../fg/menu/logo:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../fg/menu/logo:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("../fg/localization:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("../fg/menu/max_score:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("../fg/menu/max_score:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "def"
length = 5.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("../fg/menu/logo:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 512, 165 ), Vector2( 512, 155 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../fg/menu/logo:rotation_degrees")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -2.0, 2.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../fg/menu/logo:scale")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 2.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("../fg/ranking:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("../fg/menu/logo:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("../fg/menu/logo:self_modulate")
tracks/5/interp = 2
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 2.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.505882 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "start"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("../fg/menu/logo:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 512, 165 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../fg/menu/logo:rotation_degrees")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../fg/menu/logo:scale")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("../fg/ranking:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("../fg/menu/logo:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("../fg/menu/logo:self_modulate")
tracks/5/interp = 2
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("../fg/localization:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("../fg/menu/max_score:modulate")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("../fg/menu/max_score:visible")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=14]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("../fg/screen_cover/death:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../fg/screen_cover/death:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../fg/screen_cover/death/revive:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}

[sub_resource type="Animation" id=12]
resource_name = "back_to_start"
tracks/0/type = "value"
tracks/0/path = NodePath("../fg/screen_cover:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 0, 0, 0.321569 ), Color( 0, 0, 0, 1 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "full_restart"
} ]
}

[sub_resource type="Animation" id=11]
resource_name = "def"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("../fg/screen_cover:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 1, 0, 0, 0.321569 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../fg/screen_cover/death:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../fg/screen_cover/death:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=19]
resource_name = "revive"
tracks/0/type = "value"
tracks/0/path = NodePath("../fg/screen_cover:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 0, 0, 0.321569 ), Color( 0, 0, 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../fg/screen_cover/death:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../fg/screen_cover/death:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("../fg/screen_cover/death/revive:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[node name="game" type="Node2D"]
script = ExtResource( 3 )

[node name="floor" type="ParallaxBackground" parent="."]
layer = -1

[node name="floor" type="ParallaxLayer" parent="floor"]
motion_mirroring = Vector2( 1024, 600 )

[node name="spr" type="Sprite" parent="floor/floor"]
texture = ExtResource( 1 )
centered = false

[node name="darkness" type="CanvasModulate" parent="floor/floor"]
color = Color( 0, 0, 0, 1 )

[node name="bg" type="Position2D" parent="."]

[node name="graves" type="Position2D" parent="."]

[node name="game" type="Position2D" parent="."]

[node name="player" parent="game" instance=ExtResource( 2 )]
position = Vector2( 509, 300 )
bat_shoot_cd = 0.5

[node name="darkness" type="CanvasModulate" parent="game"]
color = Color( 0, 0, 0, 0.733333 )

[node name="pickable_weapon3" parent="game" instance=ExtResource( 11 )]
position = Vector2( 509, 506 )
weapon = "bat"

[node name="fg" type="CanvasLayer" parent="."]

[node name="ranking" type="Control" parent="fg"]
visible = false
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 9 )

[node name="ranks" type="AnimatedSprite" parent="fg/ranking"]
position = Vector2( 922, 94 )
frames = SubResource( 1 )
animation = "D"

[node name="wait" type="Timer" parent="fg/ranking"]
one_shot = true

[node name="score" type="Label" parent="fg/ranking"]
margin_left = 857.0
margin_top = 214.0
margin_right = 902.0
margin_bottom = 228.0
custom_fonts/font = SubResource( 5 )
text = "SCORE:"

[node name="combo" type="Label" parent="fg/ranking"]
margin_left = 857.0
margin_top = 187.0
margin_right = 897.0
margin_bottom = 201.0
custom_fonts/font = SubResource( 6 )
text = "x0"

[node name="money" type="Label" parent="fg/ranking"]
margin_left = 857.0
margin_top = 240.0
margin_right = 897.0
margin_bottom = 254.0
custom_fonts/font = SubResource( 7 )
text = "MONEY:"

[node name="hidden_stats" parent="fg" instance=ExtResource( 10 )]
margin_top = 2.0
margin_bottom = 42.0

[node name="localization" type="Control" parent="fg"]
margin_right = 40.0
margin_bottom = 40.0

[node name="button" type="TouchScreenButton" parent="fg/localization"]
modulate = Color( 1, 1, 1, 0.4 )
position = Vector2( 0, 540 )
normal = ExtResource( 13 )

[node name="menu" type="Control" parent="fg"]
margin_right = 40.0
margin_bottom = 40.0

[node name="logo" type="Sprite" parent="fg/menu"]
position = Vector2( 512, 165 )
texture = ExtResource( 12 )

[node name="max_score" type="Label" parent="fg/menu"]
margin_left = 572.0
margin_top = 290.0
margin_right = 648.0
margin_bottom = 304.0
custom_fonts/font = SubResource( 8 )
text = "MAX_SCORE"

[node name="screen_cover" type="ColorRect" parent="fg"]
margin_right = 1024.0
margin_bottom = 600.0
color = Color( 0, 0, 0, 1 )

[node name="start" type="AnimationPlayer" parent="fg/screen_cover"]
autoplay = "def"
anims/RESET = SubResource( 10 )
anims/def = SubResource( 9 )

[node name="death" type="Control" parent="fg/screen_cover"]
visible = false
modulate = Color( 1, 1, 1, 0 )
margin_right = 40.0
margin_bottom = 40.0

[node name="lbl" type="Label" parent="fg/screen_cover/death"]
margin_right = 1024.0
margin_bottom = 235.0
custom_colors/font_color = Color( 1, 0.631373, 0, 1 )
custom_fonts/font = SubResource( 13 )
text = "LBL_DEATH"
align = 1
valign = 1
autowrap = true

[node name="new_highscore" type="Label" parent="fg/screen_cover/death"]
visible = false
self_modulate = Color( 0.716078, 0.4, 0.562353, 1 )
margin_top = 290.0
margin_right = 1026.0
margin_bottom = 370.0
custom_fonts/font = SubResource( 15 )
text = "RECORD_SCORE"
align = 1
valign = 1
autowrap = true

[node name="overlay" type="Label" parent="fg/screen_cover/death/new_highscore"]
self_modulate = Color( 0.791373, 0.225882, 0.550588, 1 )
margin_left = -0.92
margin_top = -4.88
margin_right = 1025.08
margin_bottom = 75.12
custom_fonts/font = SubResource( 15 )
text = "RECORD_SCORE"
align = 1
valign = 1
autowrap = true

[node name="def" type="AnimationPlayer" parent="fg/screen_cover/death/new_highscore"]
autoplay = "def"
anims/def = SubResource( 16 )

[node name="revive" type="TouchScreenButton" parent="fg/screen_cover/death"]
position = Vector2( 83, 434 )
scale = Vector2( 4, 4 )
normal = ExtResource( 16 )

[node name="lbl" type="Label" parent="fg/screen_cover/death/revive"]
margin_right = 239.0
margin_bottom = 80.0
rect_scale = Vector2( 0.25, 0.25 )
custom_colors/font_color = Color( 0.101961, 0, 1, 1 )
custom_fonts/font = SubResource( 17 )
text = "REVIVE_BUTTION"
align = 1
valign = 1
autowrap = true

[node name="restart" type="TouchScreenButton" parent="fg/screen_cover/death"]
position = Vector2( 744, 450 )
scale = Vector2( 2, 2 )
normal = ExtResource( 16 )

[node name="lbl" type="Label" parent="fg/screen_cover/death/restart"]
margin_right = 120.0
margin_bottom = 40.0
rect_scale = Vector2( 0.5, 0.5 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_fonts/font = SubResource( 18 )
text = "RESTART_BUTTON"
align = 1
valign = 1
autowrap = true

[node name="timers" type="Node" parent="."]

[node name="spawn_timer" type="Timer" parent="timers"]
one_shot = true

[node name="add_dificulty_timer" type="Timer" parent="timers"]
wait_time = 10.0

[node name="anims" type="Node" parent="."]

[node name="start" type="AnimationPlayer" parent="anims"]
autoplay = "def"
anims/RESET = SubResource( 3 )
anims/def = SubResource( 2 )
anims/start = SubResource( 4 )

[node name="end" type="AnimationPlayer" parent="anims"]
anims/RESET = SubResource( 14 )
anims/back_to_start = SubResource( 12 )
anims/def = SubResource( 11 )
anims/revive = SubResource( 19 )

[node name="ad_watcher" parent="." instance=ExtResource( 17 )]

[node name="sounds" type="Node" parent="."]

[node name="music" type="AudioStreamPlayer" parent="sounds"]
stream = ExtResource( 18 )
volume_db = -16.976
autoplay = true
bus = "Music"

[connection signal="pressed" from="fg/localization/button" to="." method="_on_localization_button_pressed"]
[connection signal="pressed" from="fg/screen_cover/death/revive" to="." method="_on_revive_pressed"]
[connection signal="pressed" from="fg/screen_cover/death/restart" to="." method="_on_restart_pressed"]
[connection signal="timeout" from="timers/spawn_timer" to="." method="_on_spawn_timer_timeout"]
[connection signal="timeout" from="timers/add_dificulty_timer" to="." method="_on_add_dificulty_timer_timeout"]
